fix modal position - need to fix z-index issue

--- a/src/components/UI/Backdrop/Backdrop.module.css
+++ b/src/components/UI/Backdrop/Backdrop.module.css
@@ -1,9 +1,9 @@
 .Backdrop {
-   background-color: rgba(1, 1, 1, .4);
-   z-index: 499;
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
+  background-color: rgba(1, 1, 1, 0.4);
+  z-index: 499;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
