--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,62 +1,61 @@
 .Modal {
-   position: fixed;
-   z-index: 500;
-   background: var(--white);
-   top: 30%;
-   left: calc(50% - 250px);
-   width: 500px;
-   min-height: 100px;
-   border-radius: 15px;
-   border: 1px solid #ccc;
-   box-shadow: 0 2px 2px 3px rgba(1, 1, 1, .25);
+  /* position: fixed; */
+  z-index: 500;
+  background: var(--white);
+  /* top: 30%; */
+  /* left: calc(50% - 250px); */
+  width: 500px;
+  min-height: 100px;
+  border-radius: 15px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 2px 3px rgba(1, 1, 1, 0.25);
 }
 
 @media (max-width: 600px) {
-   .Modal {
-      width: 70%;
-      left: 15%;
-   }
+  .Modal {
+    width: 70%;
+    /* left: 15%; */
+  }
 }
 
 .ModalOpen {
-   animation: openModal .4s ease-out forwards;
+  animation: openModal 0.4s ease-out forwards;
 }
 
-
 .ModalClose {
-   animation: closeModal .4s ease-out forwards;
+  animation: closeModal 0.4s ease-out forwards;
 }
 
 @keyframes openModal {
-   0% {
-      opacity: 0;
-      transform: translateY(-100%);
-   }
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
 
-   50% {
-      opacity: 1;
-      transform: translateY(90%);
-   }
+  50% {
+    opacity: 1;
+    transform: translateY(90%);
+  }
 
-   100% {
-      opacity: 1;
-      transform: translateY(0);
-   }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes closeModal {
-   0% {
-      opacity: 1;
-      transform: translateY(0);
-   }
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 
-   50% {
-      opacity: 0.8;
-      transform: translateY(60%);
-   }
+  50% {
+    opacity: 0.8;
+    transform: translateY(60%);
+  }
 
-   100% {
-      opacity: 0;
-      transform: translateY(-100%);
-   }
+  100% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
 }
